Bug 435467 - KWIN_DRM_DEVICE no longer supported
Summary: KWIN_DRM_DEVICE no longer supported
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: platform-drm (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-04-07 14:05 UTC by Martin Flöser
Modified: 2021-05-01 12:14 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Flöser 2021-04-07 14:05:03 UTC
SUMMARY

KWin used to support an environment variable to overwrite the selection of which drm device to use. This got lost in commit https://invent.kde.org/plasma/kwin/-/commit/b50f7478769c1b50b48d5f0e9201a8e4b7e275ef

STEPS TO REPRODUCE
1. Use weird vivante hardware with a card0 and a card1 which doesn't support GL on /dev/dri/card0
2. specify KWIN_DRM_DEVICE to point to /dev/dri/card1


OBSERVED RESULT

/dev/dri/card0 is used and KWin doesn't work

EXPECTED RESULT

/dev/dri/card1 is used and KWin works
Comment 1 Vlad Zahorodnii 2021-04-07 18:22:40 UTC
Would it be sufficient if we introduce an environment variable with a slightly different name, KWIN_DRM_DEVICES?
Comment 2 Martin Flöser 2021-04-07 18:54:42 UTC
(In reply to Vlad Zahorodnii from comment #1)
> Would it be sufficient if we introduce an environment variable with a
> slightly different name, KWIN_DRM_DEVICES?

sure
Comment 3 Bug Janitor Service 2021-04-30 07:07:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/917
Comment 4 Vlad Zahorodnii 2021-05-01 12:14:51 UTC
Git commit 8d9e47ee227c16e81dd0a6db3f12a94fcd14dc48 by Vlad Zahorodnii.
Committed on 01/05/2021 at 12:14.
Pushed by vladz into branch 'master'.

platforms/drm: Introduce KWIN_DRM_DEVICES

This allows to instruct kwin what drm devices must be used explicitly.

M  +24   -9    src/plugins/platforms/drm/drm_backend.cpp
M  +1    -1    src/plugins/platforms/drm/drm_backend.h
M  +1    -1    src/plugins/platforms/drm/drm_gpu.cpp
M  +3    -3    src/plugins/platforms/drm/drm_gpu.h
M  +2    -2    src/plugins/platforms/fbdev/fb_backend.cpp
M  +2    -2    src/udev.cpp
M  +1    -1    src/udev.h

https://invent.kde.org/plasma/kwin/commit/8d9e47ee227c16e81dd0a6db3f12a94fcd14dc48