platforms/drm: Introduce KWIN_DRM_DEVICES

This allows to instruct kwin what drm devices must be used explicitly.

BUG: 435467